# sae

./: .gitignore  TODO.md  TODO.org  buildlog.txt  flake.nix  pyproject.toml  summarise.fish
.github/workflows/: cxxrtl-tests.yml  synthesis.yml  unit-tests.yml
cxxrtl/: UartConnector.cc  UartConnector.h  main.cc
lluvia/: Makefile  crt0.s  linker.ld  shrimple.c  shrimprw.c  test.c
rv/: Makefile  flake.nix  shrimple.c  shrimprw.c
sae/: __init__.py  __main__.py  st.py  targets.py
sae/formal/: __init__.py
sae/isa/: __init__.py  ilayout.py
sae/rtl/: __init__.py  hart.py  isa.py  isa_rv32.py  mmu.py  rv32.py  rv32c.py  test_isa.py  test_lluvia.st  test_mmu.py  test_other.st  test_rv32c.st  test_semantics.py  test_semantics.st  test_st.py  test_top.py  test_utils.py  uart.py
sae/rtl/uart/: __init__.py
tests/: test_integers.st  test_isa.py  test_isa_ilayout.py  test_isa_insns.py  test_isa_regs.py  test_lluvia.st  test_mmu.py  test_other.st  test_rv32c.st  test_st.py  test_top.py  test_utils.py
