[project]
name = "sae"
version = "0.0"
description = ""
authors = [
    {name = "nimi", email = "correo"},
]
dependencies = [
    "amaranth >= 0.4.0dev0, < 0.6",
    "rainhdx >= 0.1",
    "funcparserlib >= 1.0.1",
]
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}

[project.optional-dependencies]
build = [
    "amaranth-boards",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[[tool.mypy.overrides]]
module = "amaranth.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "amaranth_boards.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rainhdx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "funcparserlib.*"
ignore_missing_imports = true
