[project]
name = "sae"
version = "0.0"
description = ""
authors = [
    {name = "Asherah Connor", email = "ashe@kivikakk.ee"},
]
dependencies = [
    "amaranth >= 0.4.5, < 0.6",
    "niar >= 0.1",
    "funcparserlib >= 1.0.1",
]
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}

[project.optional-dependencies]
build = [
    "amaranth-boards",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
