[project]
name = "sae"
version = "0.0"
description = ""
authors = [
    {name = "Asherah Connor", email = "ashe@kivikakk.ee"},
]
dependencies = [
    "amaranth[builtin-yosys] @ git+https://github.com/amaranth-lang/amaranth@main",
    "amaranth-boards @ git+https://github.com/kivikakk/amaranth-boards@main",
    "amaranth-stdio @ git+https://github.com/kivikakk/amaranth-stdio@main",
    "niar @ git+https://github.com/kivikakk/niar@main",
    "funcparserlib >= 1.0.1",
]
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
addopts = ["-n", "auto"]
testpaths = ["tests"]
